--- a/pepeizqs deals web/Pages/Bundles.cshtml
+++ b/pepeizqs deals web/Pages/Bundles.cshtml
@@ -11,7 +11,24 @@
 @{
 	#nullable disable
 
-	string titulo = Herramientas.Idiomas.BuscarTexto(Model.idioma, "Title", "Bundle");
+	string idioma = Model.idioma;
+	bool usuarioLogeado = SignInManager.IsSignedIn(User);
+	Usuario usuario = new Usuario();
+
+	if (usuarioLogeado == true)
+	{
+		usuario = await UserManager.GetUserAsync(User);
+
+		if (usuario != null)
+		{
+			if (string.IsNullOrEmpty(usuario.LanguageOverride) == false)
+			{
+				idioma = usuario.LanguageOverride;
+			}
+		}
+	}
+
+	string titulo = Herramientas.Idiomas.BuscarTexto(idioma, "Title", "Bundle");
 
 	List<Bundles2.Bundle> bundlesActuales = new List<Bundles2.Bundle>();
 	List<Bundles2.Bundle> bundles = BaseDatos.Bundles.Buscar.Actuales();
@@ -30,33 +47,25 @@
 		{
 			if (bundlesActuales.Count == 1)
 			{
-				titulo = string.Format(Herramientas.Idiomas.BuscarTexto(Model.idioma, "String16", "Bundle"), bundlesActuales.Count.ToString());
+				titulo = string.Format(Herramientas.Idiomas.BuscarTexto(idioma, "String16", "Bundle"), bundlesActuales.Count.ToString());
 			}
 			else if (bundlesActuales.Count > 1)
 			{
-				titulo = string.Format(Herramientas.Idiomas.BuscarTexto(Model.idioma, "String17", "Bundle"), bundlesActuales.Count.ToString());
+				titulo = string.Format(Herramientas.Idiomas.BuscarTexto(idioma, "String17", "Bundle"), bundlesActuales.Count.ToString());
 			}
 		}
 		else if (bundlesActuales.Count == 0)
 		{
-			titulo = Herramientas.Idiomas.BuscarTexto(Model.idioma, "String18", "Bundle");
+			titulo = Herramientas.Idiomas.BuscarTexto(idioma, "String18", "Bundle");
 		}
 	}
 
 	ViewData["Title"] = titulo;
 	Layout = "/Pages/Shared/_Layout.cshtml";
 
-	bool usuarioLogeado = SignInManager.IsSignedIn(User);
-	Usuario usuario = new Usuario();
-
-	if (usuarioLogeado == true)
-	{
-		usuario = await UserManager.GetUserAsync(User);
-	}
-
 	string enlace = "https://pepeizqdeals.com/bundles/";
 
-	string descripcion = Herramientas.Idiomas.BuscarTexto(Model.idioma, "String19", "Bundle");
+	string descripcion = Herramientas.Idiomas.BuscarTexto(idioma, "String19", "Bundle");
 
 	bool seo = false;
 	string userAgent = string.Empty;
@@ -75,7 +84,7 @@
 	{
 		@(await Html.RenderComponentAsync<Componentes.Secciones.Seo>(RenderMode.ServerPrerendered, new
 		{
-			idioma = Model.idioma,
+			idioma = idioma,
 			titulo = titulo,
 			enlace = enlace,
 			canonical = enlace,
@@ -84,14 +93,14 @@
 
 		@(await Html.RenderComponentAsync<Componentes.Secciones.Bundles>(RenderMode.ServerPrerendered, new
 		{
-			idioma = Model.idioma
+			idioma = idioma
 		}))
 	}
 	else
 	{
 		@(await Html.RenderComponentAsync<Componentes.Secciones.Bundles>(RenderMode.Server, new
 		{
-			idioma = Model.idioma,
+			idioma = idioma,
 			usuarioId = usuario?.Id
 		}))
 	}
