--- a/pepeizqs deals web/Pages/Componentes/Cuenta/Cuenta.razor
+++ b/pepeizqs deals web/Pages/Componentes/Cuenta/Cuenta.razor
@@ -2,31 +2,31 @@
 
 <style>
     .boton-pestañas {
-        color: var(--colorTexto);
-        background-color: var(--fondoOscuro);
-        border: 1px solid var(--fondoBotonPequeño);
-        width: 100%;
-        transition: transform .2s;
-        font-size: 17px;
-        padding: 15px 20px;
+    color: var(--colorTexto);
+    background-color: var(--fondoOscuro);
+    border: 1px solid var(--fondoBotonPequeño);
+    width: 100%;
+    transition: transform .2s;
+    font-size: 17px;
+    padding: 15px 20px;
     }
 
     .boton-pestañas:hover {
-        color: var(--colorTextoHover);
-        transform: scale(1.01);
+    color: var(--colorTextoHover);
+    transform: scale(1.01);
     }
 
     .grid-estructura {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-        gap: 25px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 25px;
     }
-        
+
     @@media (max-width: 800px) {
-        .grid-estructura {
-            display: grid;
-            gap: 15px;
-        }
+    .grid-estructura {
+    display: grid;
+    gap: 15px;
+    }
     }
 </style>
 
@@ -78,6 +78,22 @@
 
                     <div style="margin-top: 5px; font-size: 14px;">
                         @Herramientas.Idiomas.BuscarTexto(idioma, "String15", "Account")
+                    </div>
+                </div>
+            </div>
+        </button>
+
+        <button @onclick="@(e => MostrarIdioma(e))" class="boton-pestañas">
+            <div style="display: flex; align-items: center; gap: 20px; text-align: left;">
+                <i class="fa-solid fa-earth-europe" style="font-size: 22px;"></i>
+
+                <div>
+                    <div>
+                        @Herramientas.Idiomas.BuscarTexto(idioma, "String24", "Account")
+                    </div>
+
+                    <div style="margin-top: 5px; font-size: 14px;">
+                        @Herramientas.Idiomas.BuscarTexto(idioma, "String25", "Account")
                     </div>
                 </div>
             </div>
@@ -226,19 +242,14 @@
                     <CambioContrasena idioma="@idioma" />
                 }
 
-                @if (mostrarNotificacionesCorreo == true)
-                {
-                    <NotificacionesCorreo idioma="@idioma" />
-                }
-
-                @if (mostrarNotificacionesPush == true)
-                {
-                    <NotificacionesPush idioma="@idioma" userAgent="@userAgent"/>
-                }
-
                 @if (mostrarDatosPersonales == true)
                 {
                     <DatosPersonales idioma="@idioma" />
+                }
+
+                @if (mostrarIdioma == true)
+                {
+                    <Idioma idioma="@idioma" />
                 }
 
                 @if (mostrarPatreon == true)
@@ -249,6 +260,16 @@
                 @if (mostrarClaves == true)
                 {
                     <Claves idioma="@idioma" />
+                }
+
+                @if (mostrarNotificacionesCorreo == true)
+                {
+                    <NotificacionesCorreo idioma="@idioma" />
+                }
+
+                @if (mostrarNotificacionesPush == true)
+                {
+                    <NotificacionesPush idioma="@idioma" userAgent="@userAgent" />
                 }
 
                 @if (mostrarSteam == true)
@@ -286,14 +307,17 @@
     {
         mostrarCorreo = false;
         mostrarContraseña = false;
+        mostrarDatosPersonales = false;
+        mostrarIdioma = false;
+        mostrarPatreon = false;
+        mostrarClaves = false;
+
         mostrarNotificacionesCorreo = false;
         mostrarNotificacionesPush = false;
-        mostrarDatosPersonales = false;
-        mostrarPatreon = false;
+
         mostrarSteam = false;
         mostrarGog = false;
         mostrarIsthereanydeal = false;
-        mostrarClaves = false;
     }
 
     private void ClickearCerrarPestaña()
@@ -319,6 +343,42 @@
         mostrarContraseña = true;
     }
 
+    private bool mostrarDatosPersonales = false;
+
+    private void MostrarDatosPersonales(MouseEventArgs e)
+    {
+        CerrarPestañas();
+        enseñarPestaña = true;
+        mostrarDatosPersonales = true;
+    }
+
+    private bool mostrarIdioma = false;
+
+    private void MostrarIdioma(MouseEventArgs e)
+    {
+        CerrarPestañas();
+        enseñarPestaña = true;
+        mostrarIdioma = true;
+    }
+
+    private bool mostrarPatreon = false;
+
+    private void MostrarPatreon(MouseEventArgs e)
+    {
+        CerrarPestañas();
+        enseñarPestaña = true;
+        mostrarPatreon = true;
+    }
+
+    private bool mostrarClaves = false;
+
+    private void MostrarClaves(MouseEventArgs e)
+    {
+        CerrarPestañas();
+        enseñarPestaña = true;
+        mostrarClaves = true;
+    }
+
     private bool mostrarNotificacionesCorreo = false;
 
     private void MostrarNotificacionesCorreo(MouseEventArgs e)
@@ -335,24 +395,6 @@
         CerrarPestañas();
         enseñarPestaña = true;
         mostrarNotificacionesPush = true;
-    }
-
-    private bool mostrarDatosPersonales = false;
-
-    private void MostrarDatosPersonales(MouseEventArgs e)
-    {
-        CerrarPestañas();
-        enseñarPestaña = true;
-        mostrarDatosPersonales = true;
-    }
-
-    private bool mostrarPatreon = false;
-
-    private void MostrarPatreon(MouseEventArgs e)
-    {
-        CerrarPestañas();
-        enseñarPestaña = true;
-        mostrarPatreon = true;
     }
 
     private bool mostrarSteam = false;
@@ -380,14 +422,5 @@
         CerrarPestañas();
         enseñarPestaña = true;
         mostrarIsthereanydeal = true;
-    }
-
-    private bool mostrarClaves = false;
-
-    private void MostrarClaves(MouseEventArgs e)
-    {
-        CerrarPestañas();
-        enseñarPestaña = true;
-        mostrarClaves = true;
     }
 }
