--- a/pepeizqs deals web/Pages/News.cshtml
+++ b/pepeizqs deals web/Pages/News.cshtml
@@ -13,25 +13,33 @@
 @{
 	#nullable disable
 
-	string titulo = Herramientas.Idiomas.ElegirTexto(Model.idioma, Model.noticia.TituloEn, Model.noticia.TituloEs);
-
-	ViewData["Title"] = titulo;
-	Layout = "/Pages/Shared/_Layout.cshtml";
-
+	string idioma = Model.idioma;
 	bool usuarioLogeado = SignInManager.IsSignedIn(User);
-	Usuario usuario = new Usuario();
-
 	bool adminLogeado = false;
+	Usuario usuario = new Usuario();
 
 	if (usuarioLogeado == true)
 	{
 		usuario = await UserManager.GetUserAsync(User);
 
-		if (global::BaseDatos.Usuarios.Buscar.RolDios(usuario.Id) == true)
+		if (usuario != null)
 		{
-			adminLogeado = true;
+			if (string.IsNullOrEmpty(usuario.LanguageOverride) == false)
+			{
+				idioma = usuario.LanguageOverride;
+			}
+
+			if (global::BaseDatos.Usuarios.Buscar.RolDios(usuario.Id) == true)
+			{
+				adminLogeado = true;
+			}
 		}
 	}
+
+	string titulo = Herramientas.Idiomas.ElegirTexto(idioma, Model.noticia.TituloEn, Model.noticia.TituloEs);
+
+	ViewData["Title"] = titulo;
+	Layout = "/Pages/Shared/_Layout.cshtml";
 
 	string enlace = "https://pepeizqdeals.com/news/" + Model.noticia.Id.ToString() + "/" + Herramientas.EnlaceAdaptador.Nombre(titulo) + "/";
 
@@ -43,7 +51,7 @@
 		{
 			@(await Html.RenderComponentAsync<Componentes.Admin.Noticia>(RenderMode.ServerPrerendered, new
 			{
-				idioma = Model.idioma,
+				idioma = idioma,
 				noticiaId = Model.noticia.Id,
 				usuarioId = usuario?.Id
 			}))
@@ -67,7 +75,7 @@
 	{
 		@(await Html.RenderComponentAsync<Componentes.Secciones.Seo>(RenderMode.ServerPrerendered, new
 		{
-			idioma = Model.idioma,
+			idioma = idioma,
 			titulo = titulo,
 			enlace = enlace,
 			canonical = enlace,
@@ -76,7 +84,7 @@
 
 		@(await Html.RenderComponentAsync<Componentes.Secciones.Noticia>(RenderMode.ServerPrerendered, new
 		{
-			idioma = Model.idioma,
+			idioma = idioma,
 			noticiaId = Model.noticia.Id
 		}))
 	}
@@ -84,7 +92,7 @@
 	{
 		@(await Html.RenderComponentAsync<Componentes.Secciones.Noticia>(RenderMode.Server, new
 		{
-			idioma = Model.idioma,
+			idioma = idioma,
 			noticiaId = Model.noticia.Id,
 			usuarioId = usuario?.Id
 		}))
