--- a/pepeizqs deals web/Pages/Subscriptions.cshtml
+++ b/pepeizqs deals web/Pages/Subscriptions.cshtml
@@ -11,16 +11,25 @@
 @{
     #nullable disable
 
-    ViewData["Title"] = Herramientas.Idiomas.BuscarTexto(Model.idioma, "Title", "Subscriptions");
-    Layout = "/Pages/Shared/_Layout.cshtml";
-
+    string idioma = Model.idioma;
     bool usuarioLogeado = SignInManager.IsSignedIn(User);
     Usuario usuario = new Usuario();
 
     if (usuarioLogeado == true)
     {
         usuario = await UserManager.GetUserAsync(User);
+
+        if (usuario != null)
+        {
+            if (string.IsNullOrEmpty(usuario.LanguageOverride) == false)
+            {
+                idioma = usuario.LanguageOverride;
+            }
+        }
     }
+
+    ViewData["Title"] = Herramientas.Idiomas.BuscarTexto(idioma, "Title", "Subscriptions");
+    Layout = "/Pages/Shared/_Layout.cshtml";
 
     bool seo = false;
     string userAgent = string.Empty;
@@ -39,14 +48,14 @@
     {
         @(await Html.RenderComponentAsync<Componentes.Secciones.Suscripciones>(RenderMode.ServerPrerendered, new
         {
-            idioma = Model.idioma
+            idioma = idioma
         }))
     }
     else
     {
         @(await Html.RenderComponentAsync<Componentes.Secciones.Suscripciones>(RenderMode.Server, new
         {
-            idioma = Model.idioma,
+            idioma = idioma,
             usuarioId = usuario?.Id
         }))
     }
