--- a/pepeizqs deals web/Pages/Wishlist.cshtml
+++ b/pepeizqs deals web/Pages/Wishlist.cshtml
@@ -11,20 +11,29 @@
 @{
 	#nullable disable
 
-	ViewData["Title"] = Herramientas.Idiomas.BuscarTexto(Model.idioma, "Title", "Wishlist");
+	string idioma = Model.idioma;
+	bool usuarioLogeado = SignInManager.IsSignedIn(User);
+	Usuario usuario = new Usuario();
+
+	if (usuarioLogeado == true)
+	{
+		usuario = await UserManager.GetUserAsync(User);
+
+		if (usuario != null)
+		{
+			if (string.IsNullOrEmpty(usuario.LanguageOverride) == false)
+			{
+				idioma = usuario.LanguageOverride;
+			}
+		}
+	}
+
+	ViewData["Title"] = Herramientas.Idiomas.BuscarTexto(idioma, "Title", "Wishlist");
 	Layout = "/Pages/Shared/_Layout.cshtml";
-
-    bool usuarioLogeado = SignInManager.IsSignedIn(User);
-    Usuario usuario = new Usuario();
-
-    if (usuarioLogeado == true)
-    {
-        usuario = await UserManager.GetUserAsync(User);
-    }
 
     @(await Html.RenderComponentAsync<Componentes.Secciones.Deseados>(RenderMode.Server, new
     {
-        idioma = Model.idioma,
+        idioma = idioma,
         usuarioId = usuario?.Id,
         usuarioLogeado = usuarioLogeado,
         otroUsuario = Model.otroUsuario
