--- a/pepeizqs deals web/Pages/account.cshtml
+++ b/pepeizqs deals web/Pages/account.cshtml
@@ -6,12 +6,28 @@
 @model AccountModel
 
 @inject SignInManager<Usuario> SignInManager
+@inject UserManager<Usuario> UserManager
 
 @{
-    ViewData["Title"] = Herramientas.Idiomas.BuscarTexto(Model.idioma, "Title", "Account");
-    Layout = "/Pages/Shared/_Layout.cshtml";
-
+    string idioma = Model.idioma;
     bool usuarioLogeado = SignInManager.IsSignedIn(User);
+    Usuario? usuario = new Usuario();
+
+    if (usuarioLogeado == true)
+    {
+        usuario = await UserManager.GetUserAsync(User);
+
+        if (usuario != null)
+        {
+            if (string.IsNullOrEmpty(usuario.LanguageOverride) == false)
+            {
+                idioma = usuario.LanguageOverride;
+            }
+        }
+    }
+
+    ViewData["Title"] = Herramientas.Idiomas.BuscarTexto(idioma, "Title", "Account");
+    Layout = "/Pages/Shared/_Layout.cshtml";
 
     string? userAgent = string.Empty;
 
@@ -24,7 +40,7 @@
     {
         @(await Html.RenderComponentAsync<Componentes.Cuenta.Cuenta>(RenderMode.Server, new
         {
-            idioma = Model.idioma,
+            idioma = idioma,
             userAgent = userAgent
         }))
     }
