--- a/pepeizqs deals web/Pages/filter.cshtml
+++ b/pepeizqs deals web/Pages/filter.cshtml
@@ -11,16 +11,25 @@
 @{
 	#nullable disable
 
-    ViewData["Title"] = Herramientas.Idiomas.BuscarTexto(Model.idioma, "Title", "Filter"); ;
-    Layout = "/Pages/Shared/_Layout.cshtml";
-
+	string idioma = Model.idioma;
 	bool usuarioLogeado = SignInManager.IsSignedIn(User);
 	Usuario usuario = new Usuario();
 
 	if (usuarioLogeado == true)
 	{
 		usuario = await UserManager.GetUserAsync(User);
+
+		if (usuario != null)
+		{
+			if (string.IsNullOrEmpty(usuario.LanguageOverride) == false)
+			{
+				idioma = usuario.LanguageOverride;
+			}
+		}
 	}
+
+    ViewData["Title"] = Herramientas.Idiomas.BuscarTexto(idioma, "Title", "Filter");
+    Layout = "/Pages/Shared/_Layout.cshtml";
 
 	if (string.IsNullOrEmpty(Model.ids) == false)
 	{
@@ -41,7 +50,7 @@
 		{
 			@(await Html.RenderComponentAsync<Componentes.Secciones.Filtro>(RenderMode.ServerPrerendered, new
 			{
-				idioma = Model.idioma,
+				idioma = idioma,
 				ids = Model.ids
 			}))
 		}
@@ -49,7 +58,7 @@
 		{
 			@(await Html.RenderComponentAsync<Componentes.Secciones.Filtro>(RenderMode.Server, new
 			{
-				idioma = Model.idioma,
+				idioma = idioma,
 				ids = Model.ids,
 				usuarioId = usuario?.Id
 			}))
@@ -59,7 +68,7 @@
 	{
 		@(await Html.RenderComponentAsync<Componentes.Secciones.Filtro>(RenderMode.Server, new
 		{
-			idioma = Model.idioma,
+			idioma = idioma,
 			usuarioId = usuario?.Id
 		}))
 	}
