--- a/pepeizqs deals web/Pages/gog.cshtml
+++ b/pepeizqs deals web/Pages/gog.cshtml
@@ -1,12 +1,39 @@
 ﻿@page "/gog/{id}/{nombre?}"
 
+@using Microsoft.AspNetCore.Identity
+@using pepeizqs_deals_web.Areas.Identity.Data
+
 @model pepeizqs_deals_web.Pages.gogModel
+
+@inject SignInManager<Usuario> SignInManager
+@inject UserManager<Usuario> UserManager
 
 @{
 	#nullable disable
 
+	string idioma = Model.idioma;
+	bool usuarioLogeado = SignInManager.IsSignedIn(User);
+	Usuario usuario = new Usuario();
+
+	if (usuarioLogeado == true)
+	{
+		usuario = await UserManager.GetUserAsync(User);
+
+		if (usuario != null)
+		{
+			if (string.IsNullOrEmpty(usuario.LanguageOverride) == false)
+			{
+				idioma = usuario.LanguageOverride;
+			}
+		}
+	}
+
 	ViewData["Title"] = Model.juego.Nombre;
 	Layout = "/Pages/Shared/_Layout.cshtml";
-}
 
-@(await Html.RenderComponentAsync<Componentes.Secciones.Juego>(RenderMode.Server, new { idioma = Model.idioma, juego = Model.juego }))
+	@(await Html.RenderComponentAsync<Componentes.Secciones.Juego>(RenderMode.Server, new 
+	{ 
+		idioma = idioma, 
+		juego = Model.juego 
+	}))
+}
