--- a/pepeizqs deals web/Pages/last-added.cshtml
+++ b/pepeizqs deals web/Pages/last-added.cshtml
@@ -1,11 +1,36 @@
 ﻿@page
+
+@using Microsoft.AspNetCore.Identity
+@using pepeizqs_deals_web.Areas.Identity.Data
+
 @model pepeizqs_deals_web.Pages.LastAddedModel
 
-@{
-	ViewData["Title"] = Herramientas.Idiomas.BuscarTexto(Model.idioma, "Title", "LastAdded");
-	Layout = "/Pages/Shared/_Layout.cshtml";
-}
+@inject SignInManager<Usuario> SignInManager
+@inject UserManager<Usuario> UserManager
 
-@(await Html.RenderComponentAsync<Componentes.Secciones.UltimosAnadidos>(RenderMode.ServerPrerendered, new { 
-	idioma = Model.idioma
-}))
+@{
+	string idioma = Model.idioma;
+	bool usuarioLogeado = SignInManager.IsSignedIn(User);
+	Usuario? usuario = new Usuario();
+
+	if (usuarioLogeado == true)
+	{
+		usuario = await UserManager.GetUserAsync(User);
+
+		if (usuario != null)
+		{
+			if (string.IsNullOrEmpty(usuario.LanguageOverride) == false)
+			{
+				idioma = usuario.LanguageOverride;
+			}
+		}
+	}
+
+	ViewData["Title"] = Herramientas.Idiomas.BuscarTexto(idioma, "Title", "LastAdded");
+	Layout = "/Pages/Shared/_Layout.cshtml";
+
+	@(await Html.RenderComponentAsync<Componentes.Secciones.UltimosAnadidos>(RenderMode.ServerPrerendered, new
+	{
+		idioma = idioma
+	}))
+}
