--- a/pepeizqs deals web/Pages/last-news.cshtml
+++ b/pepeizqs deals web/Pages/last-news.cshtml
@@ -1,10 +1,34 @@
 ﻿@page
+
+@using Microsoft.AspNetCore.Identity
+@using pepeizqs_deals_web.Areas.Identity.Data
+
 @model pepeizqs_deals_web.Pages.LastNewsModel
+
+@inject SignInManager<Usuario> SignInManager
+@inject UserManager<Usuario> UserManager
 
 @{
 	#nullable disable
 
-	ViewData["Title"] = Herramientas.Idiomas.BuscarTexto(Model.idioma, "Title", "LastNews");
+	string idioma = Model.idioma;
+	bool usuarioLogeado = SignInManager.IsSignedIn(User);
+	Usuario usuario = new Usuario();
+
+	if (usuarioLogeado == true)
+	{
+		usuario = await UserManager.GetUserAsync(User);
+
+		if (usuario != null)
+		{
+			if (string.IsNullOrEmpty(usuario.LanguageOverride) == false)
+			{
+				idioma = usuario.LanguageOverride;
+			}
+		}
+	}
+
+	ViewData["Title"] = Herramientas.Idiomas.BuscarTexto(idioma, "Title", "LastNews");
 	Layout = "/Pages/Shared/_Layout.cshtml";
 
 	bool seo = false;
@@ -26,23 +50,23 @@
 
 		@(await Html.RenderComponentAsync<Componentes.Secciones.Seo>(RenderMode.ServerPrerendered, new
 		{
-			idioma = Model.idioma,
-			titulo = Herramientas.Idiomas.BuscarTexto(Model.idioma, "Title", "LastNews"),
+			idioma = idioma,
+			titulo = Herramientas.Idiomas.BuscarTexto(idioma, "Title", "LastNews"),
 			enlace = enlace,
 			canonical = enlace,
-			descripcion = Herramientas.Idiomas.BuscarTexto(Model.idioma, "String4", "HistoricalLows")
+			descripcion = Herramientas.Idiomas.BuscarTexto(idioma, "String4", "HistoricalLows")
 		}))
 
 		@(await Html.RenderComponentAsync<Componentes.Secciones.UltimasNoticias>(RenderMode.ServerPrerendered, new
 		{
-			idioma = Model.idioma
+			idioma = idioma
 		}))
 	}
 	else
 	{
 		@(await Html.RenderComponentAsync<Componentes.Secciones.UltimasNoticias>(RenderMode.Server, new
 		{
-			idioma = Model.idioma
+			idioma = idioma
 		}))
 	}
 }
