--- a/pepeizqs deals web/Pages/patreon.cshtml
+++ b/pepeizqs deals web/Pages/patreon.cshtml
@@ -11,20 +11,29 @@
 @{
     #nullable disable
 
-    ViewData["Title"] = Herramientas.Idiomas.BuscarTexto(Model.idioma, "Title", "Patreon");
-    Layout = "/Pages/Shared/_Layout.cshtml";
-
+    string idioma = Model.idioma;
     bool usuarioLogeado = SignInManager.IsSignedIn(User);
     Usuario usuario = new Usuario();
 
     if (usuarioLogeado == true)
     {
         usuario = await UserManager.GetUserAsync(User);
+
+        if (usuario != null)
+        {
+            if (string.IsNullOrEmpty(usuario.LanguageOverride) == false)
+            {
+                idioma = usuario.LanguageOverride;
+            }
+        }
     }
+
+    ViewData["Title"] = Herramientas.Idiomas.BuscarTexto(idioma, "Title", "Patreon");
+    Layout = "/Pages/Shared/_Layout.cshtml";
 
     @(await Html.RenderComponentAsync<Componentes.Secciones.Patreon>(RenderMode.Server, new
     {
-        idioma = Model.idioma,
+        idioma = idioma,
         usuarioId = usuario?.Id
     }))
 }
