--- a/pepeizqs deals web/Pages/rss.cshtml
+++ b/pepeizqs deals web/Pages/rss.cshtml
@@ -1,14 +1,38 @@
 ﻿@page
+
+@using Microsoft.AspNetCore.Identity
+@using pepeizqs_deals_web.Areas.Identity.Data
+
 @model pepeizqs_deals_web.Pages.apiModel
 
+@inject SignInManager<Usuario> SignInManager
+@inject UserManager<Usuario> UserManager
+
 @{
-#nullable disable
+	#nullable disable
 
-	ViewData["Title"] = Herramientas.Idiomas.BuscarTexto(Model.idioma, "Title", "RSS");
+	string idioma = Model.idioma;
+	bool usuarioLogeado = SignInManager.IsSignedIn(User);
+	Usuario usuario = new Usuario();
+
+	if (usuarioLogeado == true)
+	{
+		usuario = await UserManager.GetUserAsync(User);
+
+		if (usuario != null)
+		{
+			if (string.IsNullOrEmpty(usuario.LanguageOverride) == false)
+			{
+				idioma = usuario.LanguageOverride;
+			}
+		}
+	}
+
+	ViewData["Title"] = Herramientas.Idiomas.BuscarTexto(idioma, "Title", "RSS");
 	Layout = "/Pages/Shared/_Layout.cshtml";
-}
 
-@(await Html.RenderComponentAsync<Componentes.Secciones.RSS>(RenderMode.ServerPrerendered, new
-{
-	idioma = Model.idioma
-}))
+	@(await Html.RenderComponentAsync<Componentes.Secciones.RSS>(RenderMode.ServerPrerendered, new
+	{
+		idioma = idioma
+	}))
+}
