--- a/pepeizqs deals web/Pages/Componentes/Admin/Juego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Juego.razor
@@ -153,7 +153,7 @@
 							<input type="text" @oninput="TextoCambiaDlcMaestro" class="entrada-texto" value="@textoDlcMaestro" />
 						</div>
 						<div style="width: 65%; padding: 0px 30px;">
-							<button @onclick="(async () => await ActualizarMediaSteamApi())" class="boton-pequeño" style="padding: 10px 15px; width: auto;">
+							<button @onclick="(async () => await ActualizarSteamApi())" class="boton-pequeño" style="padding: 10px 15px; width: auto;">
 								Buscar
 							</button>
 						</div>
@@ -192,9 +192,9 @@
 
 					</div>
 
-					<div style="display: flex; align-items: center; gap: 20px;">
-						<button @onclick="(async () => await ActualizarMediaSteamApi())" class="boton-pequeño" style="padding: 10px 15px; width: auto;">
-							Actualizar Media
+					<div style="display: flex; align-items: center; gap: 20px; flex-wrap: wrap;">
+						<button @onclick="(async () => await ActualizarSteamApi())" class="boton-pequeño" style="padding: 10px 15px; width: auto;">
+							Actualizar Steam
 						</button>
 
 						<label>@juego.FechaSteamAPIComprobacion.ToString()</label>
@@ -204,10 +204,6 @@
 						</button>
 
 						<label>@juego.DeckComprobacion.ToString()</label>
-
-						<button @onclick="(async () => await ActualizarGogApi())" class="boton-pequeño" style="padding: 10px 15px; width: auto;">
-							Actualizar GOG
-						</button>
 					</div>
 				</div>
 
@@ -226,6 +222,48 @@
 					</div>
 					<div style="width: 20%;">
 						<input type="text" @oninput="TextoCambiaSlugGOG" class="entrada-texto" value="@slugGOG" />
+					</div>
+				</div>
+
+				<div style="display: flex; align-items: center;">
+					<div style="width: 15%; padding: 0px 30px; text-align: right;">
+					
+					</div>
+
+					<div style="display: flex; align-items: center; gap: 20px; flex-wrap: wrap;">
+						<button @onclick="(async () => await ActualizarGogApi())" class="boton-pequeño" style="padding: 10px 15px; width: auto;">
+							Actualizar GOG
+						</button>
+
+						@if (juego.GalaxyGOG != null)
+						{
+							<label>@juego.GalaxyGOG.Fecha.ToString()</label>
+						}
+					</div>
+				</div>
+
+				<div style="display: flex; align-items: center;">
+					<div style="width: 15%; padding: 0px 30px; text-align: right;">
+						<label>Slug Epic</label>
+					</div>
+					<div style="width: 20%;">
+						<input type="text" @oninput="TextoCambiaSlugEpic" class="entrada-texto" value="@slugEpic" />
+					</div>
+				</div>
+
+				<div style="display: flex; align-items: center;">
+					<div style="width: 15%; padding: 0px 30px; text-align: right;">
+					</div>
+
+					<div style="display: flex; align-items: center; gap: 20px; flex-wrap: wrap;">
+						<button @onclick="(async () => await ActualizarEpicGamesApi())" class="boton-pequeño" style="padding: 10px 15px; width: auto;">
+							Actualizar Epic Games
+						</button>
+
+						@if (juego.EpicGames != null)
+						{
+							<label>@juego.EpicGames.Fecha.ToString()</label>
+						}
 					</div>
 				</div>
 
@@ -266,6 +304,7 @@
 	private string idSteam = string.Empty;
 	private string idGOG = string.Empty;
 	private string slugGOG = string.Empty;
+	private string slugEpic = string.Empty;
 
 	protected override void OnInitialized()
 	{
@@ -302,6 +341,11 @@
 		if (string.IsNullOrEmpty(juego.SlugGOG) == false)
 		{
 			slugGOG = juego.SlugGOG;
+		}
+
+		if (string.IsNullOrEmpty(juego.SlugEpic) == false)
+		{
+			slugEpic = juego.SlugEpic;
 		}
 
 		if (string.IsNullOrEmpty(juego.FreeToPlay) == false)
@@ -670,7 +714,7 @@
 
 				BaseDatos.Juegos.Actualizar.IdSteam(juego, conexion);
 
-				await ActualizarMediaSteamApi();
+				await ActualizarSteamApi();
 			}
 		}
 	}
@@ -711,7 +755,25 @@
 		}
 	}
 
-	private async Task ActualizarMediaSteamApi()
+	private void TextoCambiaSlugEpic(ChangeEventArgs texto)
+	{
+		if (string.IsNullOrEmpty(texto.Value.ToString()) == false)
+		{
+			string nuevoTexto = texto.Value.ToString().Trim();
+
+			slugEpic = nuevoTexto;
+
+			SqlConnection conexion = Herramientas.BaseDatos.Conectar();
+
+			using (conexion)
+			{
+				juego.SlugEpic = slugEpic;
+				BaseDatos.Juegos.Actualizar.SlugEpic(juego, conexion);
+			}
+		}
+	}
+
+	private async Task ActualizarSteamApi()
 	{
 		global::Juegos.Juego nuevoJuego = await APIs.Steam.Juego.CargarDatosJuego(juego.IdSteam.ToString());
 
@@ -778,6 +840,14 @@
 		juego.Idiomas = await APIs.GOG.Tienda.GalaxyIdiomas(juego.IdGog.ToString(), juego.Idiomas);
 
 		global::BaseDatos.Juegos.Actualizar.GalaxyGOG(juego);
+	}
+
+	private async Task ActualizarEpicGamesApi()
+	{
+		juego.EpicGames = await APIs.EpicGames.Juego.EpicGamesDatos(juego.SlugEpic);
+		juego.Idiomas = await APIs.EpicGames.Juego.EpicGamesIdiomas(juego.SlugEpic, juego.Idiomas);
+
+		global::BaseDatos.Juegos.Actualizar.EpicGames(juego);
 	}
 
 	private string tipo = string.Empty;
